--- a/mystyles/styles.css
+++ b/mystyles/styles.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap');
 
+*{
+    padding: 0;
+    margin: 0;
+}
 
 /* INICIO */
 
@@ -9,6 +13,14 @@ background: #000 !important;
 
 nav a{
     color: blanchedalmond !important;
+}
+
+.dropdown-item{
+    color: #000 !important;
+}
+
+.dropdown-item:hover{
+    background-color: blanchedalmond !important;
 }
 
 .imginicio{
@@ -58,6 +70,42 @@ nav a{
     margin: auto;
     width: 320px; height: 320px; }
 
+.previaje{
+    display: flex;
+    justify-content: center;
+    justify-content: space-around;
+    background-color: #000;
+    color: lightblue;
+    margin: 2em;
+}
+
+.button1{
+    display: inline-block;
+    text-decoration: none;
+    background-color: #47BAEC;
+    text-align: center;
+    padding: 15px 32px;
+    border: none;
+    color: white;
+    font-size: 1.3em;
+}
+
+.button1 a{
+    text-decoration: none;
+    color: #000;
+}
+
+.button1:hover{
+    text-decoration: none;
+    background-color: white;
+}
+
+.button1 a:hover{
+    color: #47BAEC;
+}
+
+
+
 .formtext h3, p{
     text-align: center;
 }
@@ -104,7 +152,7 @@ form {
   }
 
 
-    
+
 
 /* FOOTER */
 
@@ -119,7 +167,7 @@ footer {
     background-color: #DCDCDC; }
   
 .footer p, a, span, ul {
-    color: #2EB5BD; }
+    color: #138086; }
   
 .footer {
     width: 100%;
@@ -169,7 +217,7 @@ footer h2::before {
     background: blanchedalmond; }
 
 .fredes li a .fa {
-    color: #2EB5BD;
+    color: #138086;
     font-size: 20px; }
   
 .faccesos {
@@ -185,7 +233,7 @@ footer h2::before {
 
 .faccesos a {
     text-decoration: none;
-    color: #2EB5BD; }
+    color: #138086; }
 
 .faccesos a:hover {
     color: blanchedalmond; }
@@ -200,7 +248,7 @@ footer h2::before {
 
 .info a {
     text-decoration: none;
-    color: #2EB5BD; }
+    color: #138086; }
 
 .info a:hover {
     color: blanchedalmond; }
